--- a/asset/home.css
+++ b/asset/home.css
@@ -625,46 +625,7 @@ input[type="reset"] {
   padding-left: 0rem;
 }
 
-.grid__parent {
-  margin-left: 10%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-}
-
-.div1 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-.div2 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-.div3 {
-  grid-area: 1 / 3 / 2 / 4;
-}
-.div4 {
-  grid-area: 1 / 4 / 2 / 5;
-}
-.div5 {
-  grid-area: 2 / 1 / 3 / 2;
-}
-.div6 {
-  grid-area: 2 / 2 / 3 / 3;
-}
-.div7 {
-  grid-area: 2 / 3 / 3 / 4;
-}
-
-.affiliate__card {
-  display: flex;
-  background-color: var(--background-pop);
-}
-
-.affliateSection img {
-  max-height: 10rem;
-  max-width: 10rem;
-}
+/*--------------Affiliate section End---------------------------*/
 
 element.style {
   width: 90vw;
