--- a/asset/form.css
+++ b/asset/form.css
@@ -257,3 +257,11 @@ body {
 input[type="radio"] {
   margin: 8px;
 }
+
+.bannerdiv{
+  background-color: var(--background-pop);
+  color: var(--Text);
+  margin: 0% 0% 3% 0%;
+  height: 150px;
+  border-radius: 3px;
+}
