Revert "update banner free to fee"
This reverts commit 4a3f8996e0958e328a4127388f6842ffacb13008.

--- a/asset/home.css
+++ b/asset/home.css
@@ -1226,14 +1226,12 @@ element.style {
   }
 }
 
-/*--------------------------------------------------------- 15,000 banner css -------------------------------------------------------------*/
-
 .bannerSection {
   padding: 0.5rem 0 0.5rem 0;
   width: 99%;
   margin: auto;
-  background:var(--Accent);
-  color:var(--Text);
+  background: #f2192a;
+  color: #ffffff;
   text-align: center;
 }
 
