--- a/asset/form.css
+++ b/asset/form.css
@@ -257,3 +257,28 @@ body {
 input[type="radio"] {
   margin: 8px;
 }
+
+/*-------------------------------- banner div signupform css -----------------------------------*/
+
+.bannerdiv{
+  background-color: var(--background-pop);
+  color: var(--Text);
+  margin: 0% 0% 3% 0%;
+  border-radius: 3px;
+  padding: 20px;
+  text-align: justify;
+}
+
+.wrapper .form .inputfield .btn:disabled,
+.wrapper .form .inputfield .btn[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  
+}
+.wrapper .form .inputfield .btn:hover[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  
+}
